K8S/listener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: listener
  name: listener
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: listener
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: listener
    spec:
      containers:
        - env:
            - name: MONGODB_URL
              value: mongodb://20.199.42.59:27017/
            - name: RABBITMQ_ROUTING
              value: fastapi_task
            - name: RABBITMQ_URL
              value: amqp://admin:password@20.199.42.59/
          image: 3appscr.azurecr.io/listener
          name: listener
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /code
              name: listener-claim0
      restartPolicy: Always
      volumes:
        - name: listener-claim0
          persistentVolumeClaim:
            claimName: listener-claim0
status: {}
