K8S/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: producer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: producer
    spec:
      containers:
        - env:
            - name: RABBITMQ_HOST
              value: 20.199.42.59
            - name: RABBITMQ_ROUTING
              value: fastapi_task
          image: 3appscr.azurecr.io/producer
          name: producer
          ports:
            - containerPort: 80
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /code
              name: producer-claim0
      restartPolicy: Always
      volumes:
        - name: producer-claim0
          persistentVolumeClaim:
            claimName: producer-claim0
status: {}
