K8S/getsize-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: getsize
  name: getsize
spec:
  type: ClusterIP
  ports:
    - name: "90"
      port: 90
      targetPort: 90
  selector:
    io.kompose.service: getsize
status:
  loadBalancer: {}
