K8S/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: producer
status:
  loadBalancer: {}
